修一些ide警告，包括加@NotNull